# SQoder

./: .gitignore  README.md  debug_out.txt  main.py  powershell_tools_backup.py  pyproject.toml  result3.txt  run.py  simple_text_skill.md  test_agent_info.txt  test_agent_info2.txt  test_anyio_backend.txt  test_create_agent_src.txt  test_emb_load.txt  test_full_init.txt  test_hf_emb.txt  test_hf_fields.txt  test_langchain_results.txt  test_mcp_agent.txt  test_mcp_result.txt  test_output2.txt  test_output3.txt  test_output4.txt  test_output5.txt  test_output6.txt  test_st.txt  test_streamlit_init_sim.txt  test_streamlit_mcp.txt
Coder/: .dockerignore  README.md  pyproject.toml
Coder/MCP/: shell_tools.py
Coder/agent/: code_agent.py
Coder/browser/: browser_config.py  content_extractor.py  search_strategy.py
Coder/deploy/: .env.example  Dockerfile  coder.service  deploy.sh  docker-compose.yml  docker-deploy.sh  nginx-coder.conf
Coder/docs/: agent_architecture.md
Coder/knowledge/: document_loader.py  text_splitter.py
Coder/knowledge/index/: index.faiss
Coder/multi_agent/: __init__.py  agent_builder.py  agent_orchestrator.py  integrations.py  types.py
Coder/prompts/: sop_execution.py
Coder/prompts/examples/: execute_sop.txt  query_sop.txt
Coder/server/: main.py  schemas.py
Coder/server/routes/: agent_orchestrator.py  chat.py
Coder/skills/: reverse_text_skill.json
Coder/sop/: __init__.py  checkpoint_manager.py  executor.py  skill_executor.py  skill_nl_invoker.py  state_machine.py  validator.py
Coder/storage/: db.py  skill_store.py
Coder/tests/: run_security_tests.py  test_knowledge_security.py  test_knowledge_toolkit.py  test_multi_agent.py  test_skill_system.py  test_web_search_toolkit.py
Coder/tools/: file_saver.py  skill_parser.py  web_search_toolkit.py
Coder/web/: package-lock.json  package.json
Coder/web/src/: App.tsx  types.ts
Coder/web/src/api/: chat.ts  client.ts  sessions.ts
Coder/web/src/components/: ChatMessage.tsx  Sidebar.tsx
Coder/web/src/pages/: KnowledgePage.tsx  MultiAgentPage.tsx  SkillsPage.tsx
Coder/workspace/: bubble_sort.py  test_bubble_sort.py
MCP/: powershell_tools.py
agent/: agent_chat.py  agent_chat_memory.py  code_agent.py  multi_chat.py
browser/: browser_config.py  content_extractor.py  query_parser.py  search_strategy.py
deploy/: .env.example  (+4 more)
(+72 files in other folders)
