[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coder-agent"
version = "0.1.0"
description = "AI Coding Assistant Agent"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.28",
    "langchain-core",
    "langchain-openai",
    "langchain-community",
    "langchain-huggingface",
    "langchain-mcp-adapters",
    "langgraph",
    "langgraph-checkpoint-postgres>=2.0.0",
    "pydantic",
    "streamlit",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "psutil",
    "mcp",
    "redis>=5.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "sentence-transformers>=5.1.2",
    "faiss-cpu>=1.13.0",
    "huggingface-hub>=0.36.2",
    "playwright>=1.45.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["Coder", "Coder.*"]
